Update miscellaneous thingies
